# test-task-forager-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg  start.sh
apps/core/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
apps/songs/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
apps/songs/migrations/: 0001_initial.py  0002_alter_album_release_date.py
apps/storage/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
music_service/: asgi.py  settings.py  urls.py  wsgi.py
