[tool.poetry]
name = "test-task-forager-ai"
version = "0.1.0"
description = "This is test task for Junior Python Developer position"
authors = ["hifichevymane <blekbjek@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
